# kubectl-reveal

./: Cargo.toml  LICENSE  README.md  flake.nix  kubectl-reveal-secret  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
src/: cli.rs  k8s.rs  lib.rs  main.rs
src/commands/: completion.rs  secret.rs
