[package]
name = "kubectl-reveal"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
kube = { version = "0.84.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
clap_complete = "4.3.2"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
